# Simplang

./: .gitignore  AUTHORS  AgentOrientedConcept.md  CHECKLIST.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  LICENSE  LanguageSpec.md  Makefile.am  README.md  Spec.md  configure.ac  declutter.sh  notes  test.sl
include/: analyze.h  bimap.h  data.h  error.h  interpreter.h  lexer.h  object.h  parser.h  scanner.h  statement.h  token.h  tokenenums.h  typeenums.h  typing.h
slimpl/: main.sl
src/: Makefile.am  README.md  advanced.sl  analyze.cpp  data.cpp  error.cpp  example.sl  interpreter.cpp  lexer.cpp  main.cpp  makefile  makefile.old  object.cpp  parser.cpp  scanner.cpp  slc  statement.cpp  test.sl  typing.cpp
tests/: Makefile.am  passing_test.cpp
